# Market-Research-Analyst

./: DEPLOYMENT_GUIDE.md  README.md  SYSTEM_DOCUMENTATION.md  USAGE_GUIDE.md  requirements.txt  research_report.md
marketresearch/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  report.md  requirements.txt  research_report.md
marketresearch/api/: auth.py  main.py  models.py  requirements.txt  research_report.md  run.py
marketresearch/api/routes/: knowledge.py  research.py
marketresearch/api/services/: knowledge_service.py  research_service.py
marketresearch/chroma_db/: chroma.sqlite3
marketresearch/knowledge/: user_preference.txt
marketresearch/knowledge/company_profiles/: openai_profile.txt  tech_nexus_inc_profile.txt
marketresearch/knowledge/industry_reports/: ai_governance_regulatory_landscape.txt
marketresearch/knowledge/market_data/: global_tech_stock_indices_analysis_q3.txt
marketresearch/src/marketresearch/: crew.py  main.py  rag_chain_factory.py
marketresearch/src/marketresearch/chains/: __init__.py  base.py
marketresearch/src/marketresearch/config/: agents.yaml  gemini_config.py  tasks.yaml
marketresearch/src/marketresearch/prompts/: analysis_prompts.py  base.py  prompt_registry.py  reporting_prompts.py  research_prompts.py
marketresearch/tests/: check_yaml.py  debug_ingestion.py  test_chains.py  test_config.py  test_gemini_models.py  test_integrated_crew.py  test_isolated_issues.py  test_multi_model.py  test_rag_chroma.py  test_rag_status.py  verify_ingestion.py  zero_prompt_validation.py
(+62 files in other folders)
