[project]
name = "marketresearch"
version = "0.1.0"
description = "marketResearch using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.1,<1.0.0"
]

[project.scripts]
marketresearch = "marketresearch.main:run"
run_crew = "marketresearch.main:run"
train = "marketresearch.main:train"
replay = "marketresearch.main:replay"
test = "marketresearch.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
